Adding a cleaned up matrix prep routine
Doesn't yet work. I believe it is because the inequality constraints need to be separated or else there are too few
and the program is unbounded. What needs to happen: for example for each node, you cannot count the number of
incoming nodes in total, you must count them using separate constraints. In the end the number of non-zero values
in the constraint matrix is the same, but there are more constraints.

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -144,7 +144,7 @@ allow for arbitrary parameter sets.  Define a distance function $\mathcal{D}
 similarity between $2$ sets of parameters. We will now consider a method that
 finds $L$ tuples of parameters that are closest.
 
-We compute the cost tensor %$\boldsymbol{C}$
+We compute the cost tensor
 $
     \boldsymbol{C} = \theta^{h}
     \otimes_{\mathcal{D}} \mathellipsis \otimes_{\mathcal{D}} \theta^{h+K-1}
