Added section on computational complexity

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -90,3 +90,10 @@
   organization={IEEE}
 }
 
+@book{golub1996matrix,
+  title={Matrix computations},
+  author={Golub, Gene H and Van Loan, Charles F},
+  edition={3rd},
+  year={1996},
+  publisher={The John Hopkins University Press}
+}
